<resources>
    <string name="app_name">Contacts</string>
    <string name="title_contact_detail">Contact Detail</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company">Company:</string>
    <string name="name">Name:</string>
    <string name="contactpicture">Contact picture</string>
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>
    <string name="birthday">Birthday:</string>
    <string name="email">Email:</string>
    <string name="website">Website:</string>
</resources>
