<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/mainpadding"
        xmlns:android="http://schemas.android.com/apk/res/android">



    <LinearLayout
            android:layout_below="@+id/iconsContainer"
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/full_image"
            android:layout_marginBottom="@dimen/mainpadding"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/fullSizePicture"
                android:contentDescription="@string/contactpicture"
                android:layout_width="@dimen/full_image"
                android:layout_height="@dimen/full_image"
                android:background="@android:drawable/picture_frame"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/mainpadding"
                android:layout_marginLeft="@dimen/mainpadding"
                android:gravity="bottom">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>

            <TextView
                    android:id="@+id/contactName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company"/>

            <TextView
                    android:id="@+id/contactCompany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"/>

        <LinearLayout
                android:id="@+id/phonesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/homePhone"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/workPhone"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/mobilePhone"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                    android:text="Phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"/>

        </LinearLayout>


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:layout_marginTop="@dimen/mainpadding"/>

        <LinearLayout
                android:id="@+id/addressContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/contactStreet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/contactCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                    android:text="Home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"/>

        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:layout_marginTop="@dimen/mainpadding"/>

        <LinearLayout
                android:id="@+id/birthdayContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"/>

        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="@dimen/mainpadding"/>

        <LinearLayout
                android:id="@+id/emailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                    android:text="Work"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"/>


        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:layout_marginTop="@dimen/mainpadding"/>

        <LinearLayout
                android:id="@+id/websiteContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"/>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
            android:id="@+id/iconsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

        <ImageView
                android:id="@+id/backButton"
                android:src="@drawable/ic_arrow_back_black_48dp"
                android:layout_width="@dimen/iconsize"
                android:layout_height="@dimen/iconsize"/>

        <ImageView
                android:contentDescription="Edit this contact"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:id="@+id/editButton"
                android:src="@drawable/ic_mode_edit_black_48dp"
                android:layout_width="@dimen/iconsize"
                android:layout_height="@dimen/iconsize"/>

        <ImageView
                android:contentDescription="Mark as favorite"
                android:id="@+id/favButton"
                android:layout_width="@dimen/iconsize"
                android:layout_height="@dimen/iconsize"
                android:layout_toLeftOf="@id/editButton"
                android:src="@drawable/ic_star_border_black_48dp"
                android:layout_marginRight="@dimen/mainpadding"
                android:layout_toStartOf="@id/editButton"/>

    </RelativeLayout>

</RelativeLayout>